 	- remove unused call bus_kernel_create_monitor();
 	- split bus_map_all_properties into multiple helpers;
 	- fix use-after-free in slot-release;
 * logind:
 	- add HandleLidSwitchDocked= option to logind.conf + documentation;
 	- fix memory-leak on DropController();
 * units:
 	- order “systemd-fsck@.service” after “local-fs-pre.target”;
 	- remove “initrd-parse-etc” service;
 * systemctl:
 	- always show legend in list-unit-files, even if we know about no unit files;
 	- correct error message printed when bus_process_wait fails;
 * rpm:
 	- add user macros;
 * shared:
 	- introduce strv_find_startswith() and make use of it;
 	- drop UNIQUE() macro;
 	- make container_of() use unique variable names;
 	- make lookup_uid() global;
 	- fix minimal race where we might miss SIGTERMs when forking off an agent;
 	- use unique variable names for math-macros;
 * po:
 	- update Polish translation;
 	- update Ukrainian translation;
 * tests:
 	- use assert_se in all assertions;
 * build:
 	- add check for gperf lookup function signature;
 	- add missing include “sys/sysmacros.h” header file;
 	- add fallthrough comment to suppress warning;
 * load full selinux db;
 * remove systemd-machine-id-setup program;
 * send STOPPING=1 from our daemons;
 * code optimization;
 
   systemd (214.8)
~~~~~~~
 * core:
 	- remove systemd.confirm_spawn kernel parameter;
 	- remove confirm-spawn argument option;
 	- remove dump-configuration-items argument option;
 	- remove ConfirmSpawn manager dbus property;
 	- don't confirm when spawning process;
 	- add status_errno field to Service struct;
 	- add StatusErrno service dbus property;
 	- flush status text and errno values each time a service is started;
 	- nicer message when inotify watches are exhausted;
 	- show socket path name when bind error;
 	- show timeouts when watchdog howls;
 	- remove systemd_running_as lookup functions;
 	- change return value of the unit's enumerate() call to void;