@@ -336,7 +336,6 @@ dist_systemunit_DATA = \
 	units/local-fs.target \
 	units/local-fs-pre.target \
 	units/initrd.target \
-	units/initrd-fs.target \
 	units/initrd-root-fs.target \
 	units/remote-fs.target \
 	units/remote-fs-pre.target \
