@@ -11,7 +11,7 @@ DefaultDependencies=no
 ConditionPathExists=/etc/initrd-release
 OnFailure=emergency.target
 OnFailureJobMode=replace-irreversibly
-After=initrd-root-fs.target initrd-fs.target initrd.target
+After=initrd-root-fs.target initrd.target
 
 [Service]
 Type=oneshot
