@@ -12,5 +12,5 @@ DefaultDependencies=no
 Requires=initrd-switch-root.service
 Before=initrd-switch-root.service
 AllowIsolate=yes
-Wants=initrd-root-fs.target initrd-fs.target
-After=initrd-root-fs.target initrd-fs.target emergency.service emergency.target
+Wants=initrd-root-fs.target
+After=initrd-root-fs.target emergency.service emergency.target
