@@ -26,6 +26,7 @@ systemd System and Service Manager
  * units:
  	- order “systemd-fsck@.service” after “local-fs-pre.target”;
  	- remove “initrd-parse-etc” service;
+ 	- remove “initrd-fs” target;
  * systemctl:
  	- always show legend in list-unit-files, even if we know about no unit files;
  	- correct error message printed when bus_process_wait fails;
